# IEDA_2024_Fall_Final_Project

./: .gitignore  CMakeLists.txt  README.md  constraints.c  constraints.h  grid.c  grid.cpp  grid.h  main  main.c  main.cpp  optimization.c  optimization.cpp  optimization.h  optimization.py  place.c  place.h  quadtree.c  quadtree.h  read_input.c  read_input.cpp  read_input.h  structure.h  t.py  utils.c  utils.cpp  utils.h
